--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
     <meta name="theme-color" content="#000000">
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>DOOS & KOOKER</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
