--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
     <meta name="theme-color" content="#000000">
 
+    <meta name="description" content="UNSHAVEN, UNAWARE AND INCOMPREHENSIBLE.">
+    
+    <meta property="og:title" content="DOOS & KOOKER">
+    <meta property="og:description" content="UNSHAVEN, UNAWARE AND INCOMPREHENSIBLE.">
+    <meta property="og:image" content="http://doosandkooker.com/img/meta.jpg">
+    <meta property="og:url" content="http://doosandkooker.com">
+
     <title>DOOS & KOOKER</title>
   </head>
   <body>
